Se agrego endpoint para consultar la lista de metodos de autenticacion
