# app/docs/swagger/paths/auth.yaml
@@ -91,6 +91,47 @@
 
   area: api
 
+/api/v1/2fa:
+  get:
+    tags:
+      - auth
+    responses:
+      200:
+        description:
+        content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties: 
+                    id: 
+                      type: integer
+                    nombre:
+                      type: string
+                    descripcion:
+                      type: string
+                    icono:
+                      type: string
+      400:
+        description: Bad Request
+        content: {}
+      401:
+        description: Acceso no Autorizado
+        content: {}
+      404:
+        description: Not Found
+      405:
+        description: Not Allowed
+        content: {}
+      500:
+        description: Internal Server Error
+        content: {}
+
+    x-codegen-request-body-name: body
+
+  area: api
+
 /api/v1/verification/user/{token}:
   parameters:
   - in: path
